// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateLLMsTxt generates a \`llms.txt\` file 1`] = `
"# Some cool tool

> Blazing fast frontend tool

## Table of Contents

- [Getting started](/test/getting-started.md): Instructions on how to get started with the tool
- [Quickstart](/test/quickstart.md): Instructions for quick project initialization
- [Some other section](/test/other.md)
"
`;

exports[`generateLLMsTxt works correctly with a custom template 1`] = `
"# Custom title

> Custom description

## TOC

- [Getting started](/test/getting-started.md): Instructions on how to get started with the tool
- [Quickstart](/test/quickstart.md): Instructions for quick project initialization
- [Some other section](/test/other.md)
"
`;

exports[`generateLLMsTxt works correctly with a custom template variables 1`] = `
"# foo

> bar

## Table of Contents

zoo"
`;

exports[`generateLLMsTxt works correctly with a custom template and variables 1`] = `
"# {foo}

**{bar}**

{zoo}"
`;
